<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".CalculateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/simulation_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simulation_result_label" />

        <TextView
            android:id="@+id/gross_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 0,00"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/total_yield_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Rendimento total: R$ 0,00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_applied_value_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_applied_value_label" />

            <TextView
                android:id="@+id/start_applied_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gross_value_invested_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gross_value_invested_label" />

            <TextView
                android:id="@+id/gross_value_invested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/income_value_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/income_value_label" />

            <TextView
                android:id="@+id/income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tax_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tax_label" />

            <TextView
                android:id="@+id/tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/liquid_value_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liquid_value_label" />

            <TextView
                android:id="@+id/liquid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 0,00"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/redemption_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/redemption_date_label" />

            <TextView
                android:id="@+id/redemption_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/01/2021"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calendar_days_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calendar_days_label" />

            <TextView
                android:id="@+id/calendar_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="365"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monthly_income_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monthly_income_label" />

            <TextView
                android:id="@+id/monthly_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,00%"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percentage_income_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentage_income_label" />

            <TextView
                android:id="@+id/percentage_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,00%"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearly_income_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yearly_income_label" />

            <TextView
                android:id="@+id/yearly_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,00%"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/period_income_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/period_income_label" />

            <TextView
                android:id="@+id/period_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,00%"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <Button
            android:id="@+id/simulate_again_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simulate_again"
            android:layout_marginTop="20dp"
            app:cornerRadius="10dp" />

    </LinearLayout>

</FrameLayout>